--- a/src/main/resources/dev.properties.example
+++ b/src/main/resources/dev.properties.example
@@ -3,3 +3,5 @@ browser.size=${browser.size}
 chrome.version=${chrome.version}
 firefox.version=${forefox.version}
 selenoid.url=${selenoid.url}
+github.owner=${github.owner}
+owner.repo=${github.repo}
